# OpenGLCourse

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Input.cpp  Input.hpp  Light.hpp  Material.hpp  ModelFactory.cpp  ModelFactory.hpp  README.md  Shader.cpp  Shader.hpp  StaticMesh.cpp  StaticMesh.hpp  Texture2D.cpp  Texture2D.hpp  TransformComponent.cpp  TransformComponent.hpp  UIHelper.cpp  UIHelper.hpp  Window.cpp  Window.hpp  build.sh  imgui.ini  main.cpp  old_Entity.cpp  old_Entity.hpp  old_ModelFactory.cpp  old_ModelFactory.hpp  old_Texture2D.cpp  old_Texture2D.hpp  old_Window.cpp  old_build.sh  old_main.cpp  run.sh
.cache/clangd/index/: Camera.cpp.1343FC4CD658326B.idx  Camera.hpp.BFA136A6CBF5B3A5.idx  Entity.cpp.1EDF1AD8F1DD2D35.idx  Entity.hpp.4D23A6A6030C24AB.idx  Input.cpp.134B6E51A2B7CA0B.idx  Input.hpp.AD3D6DC8C87557D6.idx  Light.hpp.0AFD1ABBB37A4299.idx  Material.hpp.09E99AA48CB033EE.idx  MathFunctions.h.221B61CBB9432BC7.idx  ModelFactory.hpp.AE5A6FE3CB0E156D.idx  Shader.cpp.7BE6E700A599B357.idx  Shader.hpp.6C0A13B1234E2284.idx  StaticMesh.cpp.E53C9BAD98016C9F.idx  StaticMesh.hpp.9377C396DBFF2AF3.idx  Texture2D.cpp.DCFDDE470592BC58.idx  Texture2D.hpp.5A5E54B53D701AEE.idx  TransformComponent.cpp.8CEC650E5881D431.idx  TransformComponent.hpp.A947B41FE4D65437.idx  UIHelper.cpp.F14DB44F10E99370.idx  UIHelper.hpp.7B86D7FDD9B01201.idx  Window.cpp.4AC6E3905057B855.idx  Window.hpp.CD6FC49242AD52E6.idx  _fixes.hpp.83CF93FB4F4DB8FB.idx  _vectorize.hpp.789B17F096189AFC.idx  aabb.h.134542A8F9BB1BDC.idx  anim.h.C9B84E092DE6A4C5.idx  camera.h.88E3079E512EFC1A.idx  color4.h.A2C23FE4BECF1A4D.idx  color4.inl.513450863CD75D7F.idx  common.hpp.E770631163AB817E.idx  compute_common.hpp.97E5249A4E97DEFA.idx  compute_vector_relational.hpp.CCDF870A8835A581.idx  config.h.2DB48FCF75558F76.idx  constants.hpp.E4F64A9A60D3CDF0.idx  constants.inl.1B5629A215C24606.idx  defs.h.1AE1B7874F75453F.idx  epsilon.hpp.7863A25FBCEA9A04.idx  epsilon.inl.E27772ED13D52454.idx  exponential.hpp.B22ABEFA78E8C0CD.idx  func_common.inl.F9DD57CFA78BA702.idx  (+210 more)
assets/shaders/: basic_shader.frag
assets/shaders/objfile_shaders/: entity_lighting.frag  model3d.frag  model3d.vert
assets/shaders/old/: lightsource_frag.glsl
assets/shaders/tests/: depth_view.frag  stencil_outline.frag
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
models/girl_obj/: credits.txt
notanengine/: Camera.cpp  Debug.hpp  Entity.cpp  Entity.hpp  Light.cpp  Material.hpp  ModelFactory.cpp  ModelFactory.hpp  Render.cpp  Render.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  StaticMesh.cpp  StaticMesh.hpp  Texture2D.cpp  Texture2D.hpp  UIHelper.cpp  UIHelper.hpp  Window.cpp  Window.hpp  notanengine.vcxproj
notanengine/old/: models_Window.cpp
scripts/: build.sh  prebuild.bat
scripts/Linux/: prebuild.sh  run.sh
scripts/Windows/: build.bat  prebuild.bat  run.bat
shaders/: basic_shader.frag  cube_frag.glsl  entity_lighting.frag  entity_lighting.vert  lighting_frag.glsl  lighting_vert.glsl  model3d.frag  model3d_vert.glsl  notex_cube_frag.glsl  old_frag.glsl  rectangle_vert.glsl  triangle_frag.glsl  triangle_vert.glsl
shaders/objfile_shaders/: entity_lighting.frag
shaders/old/: cube_frag.glsl  cube_vert.glsl  lighting_frag.glsl  lighting_vert.glsl  model3d_frag.glsl  rectangle_frag.glsl
shaders/tests/: depth_test.frag  depth_test.vert  depth_view.frag  depth_view.vert
